# liteluna

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
captures/: bulk-out-aa5500ff.pcapng  bulk-out-aa5500ff.vcd  loopback-connect-test-disconnect.tdc  loopback-short.pcapng  sof.vcd
captures/dbg-usbip/: bad1-dmesg.txt  bad1-sim.txt  bad1-usbip-client.txt  bad1-usbip-server.txt  bad1.pcapng
docs/: serial2framed_tcp.json  sim-usbip-bridge.drawio
examples/: common.py  deca_loopback.py  log-hand.txt  log-replay-hand-ugh.txt  loopback_test.py  loopback_trigger.py  serial2framed_tcp_echo_client.py  serial2framed_tcp_echo_server.py  sim_loopback.py  sim_loopback_server.py  sim_server_replay.py
liteluna/: __init__.py  device.py  packet.py  stream.py  ulpi.py  usbbone.py  utmi.py
liteluna/luna_cores/: __init__.py  bulk_streamer.py  external_car.py  ulpi.py  util.py
