[metadata]
name = liteluna
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = LiteX LUNA USB stack integration
version = attr: liteluna.__version__
url = https://github.com/jevinskie/liteluna


[options]
python_requires = ~=3.6
packages = find:
zip_safe = True

[build-system]
requires = ["setuptools", "wheel"]
